Fix Navbar Overflow

--- a/menu/static/menu/css/menu_ordinato.css
+++ b/menu/static/menu/css/menu_ordinato.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
+
 html, body, footer{
     background-color: #191919;
     color: #191919;
@@ -34,6 +35,11 @@ border: 2px solid #191919;
 .nav-link {
 font-size: 110%;
 text-transform: capitalize;
+}
+
+#navbar{
+overflow-y: auto !important;
+max-height: 200px !important;
 }
 
 @media (max-width: 576px) {
